--- a/bstore-front/src/app/display-article/display-article.component.html
+++ b/bstore-front/src/app/display-article/display-article.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mat-card--width__restricted">
   <mat-card-header>
     <div mat-card-avatar class="display-article--card-icon"></div>
     <mat-card-title>
