--- a/bstore-front/src/app/edit-quantity/edit-quantity.component.html
+++ b/bstore-front/src/app/edit-quantity/edit-quantity.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="editQuantityForm" (ngSubmit)="submit()">
-  <mat-form-field>
+  <mat-form-field class="form-field--width__50">
     <input matInput #quantity autofocus formControlName="quantity" type="number">
   </mat-form-field>
   <button class="button" mat-icon-button type="submit" >
