--- a/bstore-front/src/app/display-article/display-article.component.css
+++ b/bstore-front/src/app/display-article/display-article.component.css
@@ -1,5 +1,8 @@
 :host {
   width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .flex-spacer {
@@ -7,5 +10,10 @@
 }
 
 .review-card--margin {
+  width: 80%;
   margin-top: 1rem;
+}
+
+.mat-card--width__restricted{
+ width: 80%;
 }
