--- a/bstore-front/src/app/toolbar/toolbar.component.html
+++ b/bstore-front/src/app/toolbar/toolbar.component.html
@@ -15,6 +15,9 @@
   <a mat-button color="primary" routerLink="/cart" *ifRole="['USER']">Cart</a>
 </div>
 <div>
+  <a mat-button color="primary" routerLink="/orders" *ifRole="['USER']">Orders</a>
+</div>
+<div>
   <a mat-button color="primary" routerLink="/article" *ifRole="['ADMIN']">Add Article</a>
 </div>
 <div>
