--- a/bstore-front/src/app/display-orders/display-orders.component.html
+++ b/bstore-front/src/app/display-orders/display-orders.component.html
@@ -1,5 +1,5 @@
 
-<table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+<table mat-table [dataSource]="dataSource" matSort>
 
   <!-- ID Column -->
   <ng-container matColumnDef="id">
