--- a/bstore-server/src/main/resources/reports/test_template.jrxml
+++ b/bstore-server/src/main/resources/reports/test_template.jrxml
@@ -12,6 +12,8 @@
     </field>
 	<field name="quantity" class="java.lang.Long">
     </field>
+	<field name="article" class="com.realdolmen.bookstore.model.Article">
+    </field>
 	<background>
 		<band/>
 	</background>
@@ -63,6 +65,15 @@
 				<text><![CDATA[articleType]]></text>
 			</staticText>
 			<staticText>
+				<reportElement mode="Opaque" x="111" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="bb1bb59e-733a-42de-a65e-f8fea30ecc52">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d8289b16-e18d-4d8b-b2d4-eecee9322dad"/>
+				</reportElement>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Title]]></text>
+			</staticText>
+			<staticText>
 				<reportElement mode="Opaque" x="333" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="de070340-d60c-42b3-9f80-4d2f95cfbbc5">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ef50504b-7471-4933-b2a4-c0f3f5f6ce70"/>
 				</reportElement>
@@ -104,6 +115,15 @@
 					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{articleType}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="111" y="0" width="111" height="20" uuid="877287a2-a2d3-40aa-b3ca-ec05d28e80a9">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d8289b16-e18d-4d8b-b2d4-eecee9322dad"/>
+				</reportElement>
+				<textElement>
+					<font size="14"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{article.getTitle()}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="333" y="0" width="111" height="20" uuid="5f6b1474-61de-4b5c-96ff-f587038c4422">
