user-account wip, security config wip

--- a/bstore-front/src/app/toolbar/toolbar.component.html
+++ b/bstore-front/src/app/toolbar/toolbar.component.html
@@ -18,6 +18,9 @@
   <a mat-button color="primary" routerLink="/orders" *ifRole="['USER']">Orders</a>
 </div>
 <div>
+  <a mat-button color="primary" routerLink="/account" *ifRole="['USER']">Account</a>
+</div>
+<div>
   <a mat-button color="primary" routerLink="/article" *ifRole="['ADMIN']">Add Article</a>
 </div>
 <div>
