--- a/bstore-front/src/app/user-account/user-account.component.html
+++ b/bstore-front/src/app/user-account/user-account.component.html
@@ -1,4 +1,5 @@
 <mat-card class="address--card">
+  <mat-card-title>Address</mat-card-title>
   <form [formGroup]="addressForm" class="address--form">
     <mat-form-field class="full-width"><label for="street">Street</label>
 
