--- a/bstore-front/src/app/display-orders/display-orders.component.html
+++ b/bstore-front/src/app/display-orders/display-orders.component.html
@@ -28,6 +28,6 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showOrder($event)">
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showOrder($event, row)">
   </tr>
 </table>
