--- a/bstore-front/src/app/toolbar/toolbar.component.html
+++ b/bstore-front/src/app/toolbar/toolbar.component.html
@@ -21,6 +21,9 @@
   <a mat-button color="primary" routerLink="/account" *ifRole="['USER']">Account</a>
 </div>
 <div>
+  <a mat-button color="primary" routerLink="/admin/orders" *ifRole="['ADMIN']">Orders</a>
+</div>
+<div>
   <a mat-button color="primary" routerLink="/article" *ifRole="['ADMIN']">Add Article</a>
 </div>
 <div>
