--- a/bstore-front/src/app/admin-orders/admin-orders.component.html
+++ b/bstore-front/src/app/admin-orders/admin-orders.component.html
@@ -1,1 +1,33 @@
 <p>admin-orders works!</p>
+<table mat-table [dataSource]="dataSource" matSort>
+
+  <!-- ID Column -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let order"> {{order.orderId}} </td>
+  </ng-container>
+
+  <!-- Progress Column -->
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef> Order Date </th>
+    <td mat-cell *matCellDef="let order"> {{order.orderDate | date: 'dd/MM/YYYY'}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="total">
+    <th mat-header-cell *matHeaderCellDef> Total </th>
+    <td mat-cell *matCellDef="let order">EUR {{order.orderTotal}} </td>
+  </ng-container>
+
+  <!-- Color Column -->
+  <ng-container matColumnDef="packinglist">
+    <th mat-header-cell *matHeaderCellDef> Packing List </th>
+    <td mat-cell *matCellDef="let order; let row = index" >
+      <button mat-button (click)="getPackingList($event, order)">Generate</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showOrder($event, row)">
+  </tr>
+</table>
