reviews in account working and done

--- a/bstore-front/src/app/add-review/add-review.component.html
+++ b/bstore-front/src/app/add-review/add-review.component.html
@@ -8,9 +8,9 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Review</mat-label>
+    <mat-label>Description</mat-label>
     <textarea matInput
-              formControlName="review"
+              formControlName="description"
               placeholder="Great work!!!"></textarea>
   </mat-form-field>
   <button mat-button type="submit">Submit</button>
