user-favorites working

--- a/bstore-front/src/app/user-account/user-account.component.html
+++ b/bstore-front/src/app/user-account/user-account.component.html
@@ -31,3 +31,5 @@
 </mat-card>
 <div class="user-account--spacer"></div>
 <app-user-reviews></app-user-reviews>
+<div class="user-account--spacer"></div>
+<app-user-favorites></app-user-favorites>
