--- a/bstore-front/src/app/display-article/display-article.component.html
+++ b/bstore-front/src/app/display-article/display-article.component.html
@@ -12,27 +12,32 @@
     <div>Title: {{article.title}}</div>
     <div>Supplier: {{article.supplierId}}</div>
     <div>Price EUR: {{article.price}}</div>
-    <div *ngIf="article.type == 'book'">Author: {{article.type == 'book' ? article?.author: ""}}</div>
-    <div *ngIf="article.type == 'book'">ISBN: {{article.type == 'book'? article?.isbn: ""}}</div>
-    <div *ngIf="article.type == 'lp'">Artist: {{article.type == 'lp'? article?.artist: ""}}</div>
-    <div *ngIf="article.type == 'lp'">Genre: {{article.type == 'lp'? article?.genre: ""}}</div>
-    <div *ngIf="article.type == 'game'">Genre: {{article.type == 'game'? article?.genre: ""}}</div>
+    <div *ngIf="article.type == 'book'">Author: {{article.type == 'book' ? article?.author : ""}}</div>
+    <div *ngIf="article.type == 'book'">ISBN: {{article.type == 'book' ? article?.isbn : ""}}</div>
+    <div *ngIf="article.type == 'lp'">Artist: {{article.type == 'lp' ? article?.artist : ""}}</div>
+    <div *ngIf="article.type == 'lp'">Genre: {{article.type == 'lp' ? article?.genre : ""}}</div>
+    <div *ngIf="article.type == 'game'">Genre: {{article.type == 'game' ? article?.genre : ""}}</div>
+    <div *ifRole="'ADMIN'">
+      <div *ngIf="article.location">Storage Location: {{article.location?.code}}
+      </div>
+    </div>
 
     <app-add-review *ngIf="showAddReview"
                     (dismissEvent)="showAddReview = false"></app-add-review>
 
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button  (click)="navigate()" >Back</button>
-<!--    <div class="flex-spacer"></div>-->
+    <button mat-button (click)="navigate()">Back</button>
+    <!--    <div class="flex-spacer"></div>-->
     <button mat-button (click)="doEdit()" *ifRole="['ADMIN']">EDIT</button>
     <button mat-button (click)="doDelete()" *ifRole="['ADMIN']">DELETE</button>
-    <button mat-button  (click)="addToCart()" *ifRole="['USER']">BUY</button>
-    <button mat-button  (click)="displayAddReview()" *ifRole="['USER']">REVIEW</button>
-    <mat-slide-toggle  [checked]="isFavorite" (change)="favorite($event, article)"  *ifRole="['USER']">Favorite</mat-slide-toggle>
+    <button mat-button (click)="addToCart()" *ifRole="['USER']">BUY</button>
+    <button mat-button (click)="displayAddReview()" *ifRole="['USER']">REVIEW</button>
+    <mat-slide-toggle [checked]="isFavorite" (change)="favorite($event, article)" *ifRole="['USER']">Favorite
+    </mat-slide-toggle>
   </mat-card-actions>
 </mat-card>
-<div *ngIf="reviewsExist"><h3 class="review-card--margin" > Reviews </h3></div>
+<div *ngIf="reviewsExist"><h3 class="review-card--margin"> Reviews </h3></div>
 
 <mat-card *ngFor="let review of reviews" class="review-card--margin">
   <mat-card-header>
