--- a/bstore-front/src/app/edit-article/edit-article.component.html
+++ b/bstore-front/src/app/edit-article/edit-article.component.html
@@ -74,6 +74,26 @@
         </mat-select>
       </mat-form-field>
     </div>
+
+    <div formGroupName="location"  class="edit-article--input-fields__column" *ifRole="'ADMIN'">
+      <mat-form-field>
+        <mat-label>Code</mat-label>
+        <input matInput formControlName="code">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Row</mat-label>
+        <input matInput formControlName="row">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Segment</mat-label>
+        <input matInput formControlName="segment">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Level</mat-label>
+        <input matInput formControlName="level">
+      </mat-form-field>
+    </div>
+
     <div class="search-form--errors">
       <div *ngIf="!articleForm.valid"> Some data is missing, please check the entries</div>
       <div *ngIf="articleForm.controls.type.value == 'all'
