order_id front and invoice fix

--- a/bstore-server/src/main/resources/reports/test_template.jrxml
+++ b/bstore-server/src/main/resources/reports/test_template.jrxml
@@ -37,7 +37,7 @@
 					<textElement>
 						<font size="14" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$P{ORDER}.getOrderId()]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$P{ORDER}.getId()]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
