fixes in orderid

--- a/bstore-front/src/app/cart/cart.component.html
+++ b/bstore-front/src/app/cart/cart.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
     <div class="cart--header-container">
-      <p class="cart--header-item">Order ID: {{cart?.orderId}}</p>
+      <p class="cart--header-item">Order ID: {{cart?.id}}</p>
       <p class="cart--header-item">Cart Date:  {{cartDateFormatted}}</p>
       <p class="cart--header-item">Cart Total: {{cart?.orderTotal}}</p>
       <div class="cart--header-item" *ngIf="booksQuantity>0">
