--- a/bstore-front/src/app/admin-orders/admin-orders.component.html
+++ b/bstore-front/src/app/admin-orders/admin-orders.component.html
@@ -3,7 +3,7 @@
   <!-- ID Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let order"> {{order.orderId}} </td>
+    <td mat-cell *matCellDef="let order"> {{order.id}} </td>
   </ng-container>
 
   <!-- Progress Column -->
